--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
     <header>
@@ -99,6 +100,66 @@
                     />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/bankingapp.jpg" 
+                    alt="Banking App"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/cash.jpg"
+                    alt="Cashless Payment"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/meditation.jpg"
+                    alt="Meditation"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxi.jpg"
+                    alt="Taxi Service"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screen.jpg"
+                    alt="Screen Illustrations"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/online-cours.jpg"
+                    alt="Online Courses"
+                    width="264"
+                    height="260"
+                    />
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
                 </li>
             </ul>
         </section>
