--- a/index.html
+++ b/index.html
@@ -5,39 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="./index.html" target="_self">WebStudio</a>
+        <a class="logo" href="./index.html" target="_self">Web<span class="logo-accent">Studio</span></a>
         <nav>
             <ul>
                 <li>
-                    <a href="./index.html" target="_self">Studio</a>
+                    <a class="navigation" href="./index.html" target="_self">Studio</a>
                 </li>
                 <li>
-                    <a href="" target="_blank">Portfolio</a>
+                    <a class="navigation" href="" target="_blank">Portfolio</a>
                 </li>
                 <li>
-                    <a href="" target="_blank">Contacts</a>
+                    <a class="navigation" href="" target="_blank">Contacts</a>
                 </li>
              </ul>
         </nav>
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="main-section">
+            <h1 class="page-title">Effective Solutions for Your Business</h1>
+            <button class="order" type="button">Order Service</button>
         </section>
 
         <section>
@@ -62,8 +65,8 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
+        <section class="team-section">
+            <h2 class="section-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/designer.jpg" 
@@ -166,7 +169,7 @@
     </main> 
     
     <footer>
-        <a href="./index.html" target="_self">WebStudio</a>
+        <a class="logo" href="./index.html" target="_self">Web<span class="logo-accent">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
