--- a/index.html
+++ b/index.html
@@ -68,41 +68,41 @@
         <section class="team-section">
             <h2 class="section-title">Our Team</h2>
             <ul>
-                <li>
+                <li class="workers">
                     <img src="./images/designer.jpg" 
                     alt="Product Designer"
                     width="264"
                     height="260"
                     />
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="profession">Product Designer</p>
                 </li>
-                <li>
+                <li class="workers">
                     <img src="./images/frontdev.jpg" 
                     alt="Frontend Developer"
                     width="264"
                     height="260"
                     />
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="profession">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="workers">
                     <img src="./images/marketing.jpg" 
                     alt="Marketing"
                     width="264"
                     height="260"
                     />
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="profession">Marketing</p>
                 </li>
-                <li>
+                <li class="workers">
                     <img src="./images/uidesign.jpg" 
                     alt="UI Designer"
                     width="264"
                     height="260"
                     />
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="profession">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -168,9 +168,9 @@
         </section>
     </main> 
     
-    <footer>
-        <a class="logo" href="./index.html" target="_self">Web<span class="logo-accent">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="logo" href="./index.html" target="_self">Web<span class="logo-accent2">Studio</span></a>
+        <p class="slogan">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>  
