--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <header>
@@ -44,24 +44,24 @@
             <button class="order" type="button">Order Service</button>
         </section>
 
-        <section>
+        <section class="features-section">
             <h2>Our Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="features-section">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <p class="features-section">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    <p class="features-section">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="features-section">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -108,62 +108,62 @@
             </ul>
         </section>
 
-        <section>
+        <section class="portfolio-section">
             <h2>Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/bankingapp.jpg" 
                     alt="Banking App"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Banking App</h3>
-                    <p>App</p>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/cash.jpg"
                     alt="Cashless Payment"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/meditation.jpg"
                     alt="Meditation"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Meditation App</h3>
-                    <p>App</p>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/taxi.jpg"
                     alt="Taxi Service"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/screen.jpg"
                     alt="Screen Illustrations"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
                     <img src="./images/online-cours.jpg"
                     alt="Online Courses"
-                    width="264"
-                    height="260"
+                    width="360"
+                    height="300"
                     />
                     <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
         </section>
