fixed letter spacing

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         </section>
 
         <section class="features-section">
-            <h2>Our Features</h2>
+            <h2 class="section-title">Our Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p class="features-section">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p class="features-section">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p class="features-section">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    <p class="features-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p class="features-section">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -109,7 +109,7 @@
         </section>
 
         <section class="portfolio-section">
-            <h2>Our Portfolio</h2>
+            <h2 class="section-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/bankingapp.jpg" 
